# Gesture_control_project

./: OpenCVmp-HandDetectNTrack.py  README.md  calibration.py  dellg15_webcam_data.yaml  fisheye_cam_data.yaml  read_pgm.py  sample_openCV.py  shape_detection.py
panda_bot_description/: package.xml  setup.cfg  setup.py
panda_bot_description/config/: display.rviz
panda_bot_description/launch/: display.launch.py  gazebo.launch.py
panda_bot_description/urdf/: ros2_control.xacro  welder.gazebo  welder.xacro
panda_moveit_config/: package.xml
panda_moveit_config/config/: kinematics.yaml  ompl_planning.yaml  ros2_controller.yaml  welder.ros2_control.xacro  welder.srdf  welder.urdf.xacro
panda_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  spawn_panda_arm_moveit.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
pymoveit2/examples/: ex_joint_goal.py
pymoveit2/pymoveit2/robots/: welder.py
